[package]
name = "bite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.6"
aws-sdk-ec2 = "1.20.0"
clap = { version = "4.5.2", features = ["derive"] }
color-eyre = "0.6.2"
home = "0.5.9"
indicatif = { version = "0.17.8", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
